# intstv-project

./: README.md
project/: ha_upute.txt
project/HomeAssistant-konfiguracija/: automations.yaml  configuration.yaml  upute
project/HomeAssistant-web-aplikacija/: history.html  homepage.html  script-for-history.js  script.js  style-for-history.css  style.css
project/IoTROL-iOS/: AppDelegate.swift
project/IoTROL-iOS/Base.lproj/: LaunchScreen.storyboard
project/IoTROL-iOS/Extensions/: Color+Extension.swift  UIViewController+Extension.swift
project/IoTROL-iOS/Models/: BlindsModel.swift  LightModel.swift  LuminosityModel.swift  RoomModel.swift  TempModel.swift
project/IoTROL-iOS/Network/: APIError.swift  NetworkClient.swift
project/IoTROL-iOS/ViewControllers/: BlindsViewController.swift  LightsViewController.swift  MainViewController.swift  RoomViewController.swift
project/IoTROL-iOS/Views/: BlindsView.swift  HomeView.swift  LightsView.swift  PrimaryButton.swift  RoomView.swift
project/Mikroracunalo-ESP32/: CMakeLists.txt  configuration.h  main.cpp
project/Mikroracunalo-ESP32/controller/blinds/: controller.cpp  controller.h
project/Mikroracunalo-ESP32/controller/lights/: controller.cpp  controller.h
project/Mikroracunalo-ESP32/driver/dht/: dht.cpp  dht.h  esp_idf_lib_helpers.h
project/Mikroracunalo-ESP32/driver/servo/: servo.cpp  servo.h
project/Mikroracunalo-ESP32/network/: network_setup.cpp  network_setup.h
